Fixed FAQ route Added policy authorisation for user rating Fixed report auction policy Fixed rate user policy Changed scrollbar color Added NSFW filter on create auction Disabled message input if user is banned

--- a/public/css/scrollbars.css
+++ b/public/css/scrollbars.css
@@ -3,7 +3,7 @@
 /* Works on Firefox */
 * {
     scrollbar-width: thin;
-    scrollbar-color: blue transparent;
+    scrollbar-color: #0d6efd transparent;
   }
 
   /* Works on Chrome, Edge, and Safari */
@@ -16,7 +16,7 @@
   }
 
   *::-webkit-scrollbar-thumb {
-    background-color: blue;
+    background-color: #0d6efd;
     border-radius: 20px;
     /* border: 3px solid orange; */
   }
